# nwsl-elo

./: .gitignore  get_data.py  league.config  pyproject.toml
data/seasons/: season_2c72951781454b9cb601275b50d75746.json  season_336768ec0b434e4a84a87c8cc7669f07.json  season_3d604e1786094afea81f7580f011e732.json  season_6199a51e9a764735b006e19fb7b2fb64.json  season_79664e9589084e1b83d2dec2c279c18c.json  season_8aafdc03cfeb42339a069df1f1a319df.json  season_8d98737772af4fa4bc25be17f5647b57.json  season_94c1960d277841139f67628f8a71ff79.json  season_a2b6a334db0d49d28a86f75aa4d02926.json  season_be274603a2704d7f95d5695efc7f7edc.json  season_cb1ee228e1304d148c91afbbd3400522.json  season_d1162e7ef3924fa19878d5c182e233bd.json  season_d2c9690effda46f698b046887407d1e7.json  season_e7e78907d0b549aba3282000d7ed5437.json  season_eb5fbe4b22ed46a697ac83101832e19c.json  season_fad050beee834db88fa9f2eb28ce5a5c.json  season_fe17bea0b7234cf7957c7249cb828270.json
