[tool.poetry]
name = "nwsl-elo"
version = "0.1.0"
description = "Calculating Elo for the National Women's Soccer League"
authors = ["eric <eric.j.blom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
elo-lib = {path = "../elo_lib", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
